carga de imagen en el bien registrado

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.css-mhc70k-MuiGrid-root>.MuiGrid-item{
+  padding-top: 12px!important;
+}
